# dictd

./: Cargo.toml  README.md  example_config.toml
src/: config.rs  dictionary.rs  fallback.rs  main.rs
