[package]
name = "dictd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "net", "macros", "io-util", "fs"]}
tokio-util = { version = "*", features=["codec"] }
futures-util = "0.3.25"
futures = { version = "^0.3" }
regex = "1.10.2"
rayon = "1.8.0"
strum = "0.25.0"
serde = { version = "^1", features = ["derive"] }
toml = "0.8.8"
strum_macros = "0.25.3"
egzreader = "2.0.4"
zstd-map = {path = "../../BitsSex/zstd-map" }
newline-converter = "0.3.0"
memory-stats = "1.1.0"

[profile.release]
opt-level = 3

[profile.fastprod]
inherits = "release"
opt-level = 1

[profile.fastdev]
inherits = "dev"
opt-level = 1

[profile.production]
inherits = "release"
lto = "fat"