[package]
name = "dictd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "net", "macros", "io-util", "fs"]}
tokio-util = { version = "*", features=["codec"] }
futures-util = "^0.3"
futures = { version = "^0.3" }
regex = "^1"
rayon = "1.8"
strum = "0.25"
serde = { version = "^1", features = ["derive"] }
toml = "0.8"
strum_macros = "0.25"
egzreader = "2
zstd-map = {path = "../../BitsSex/zstd-map" }
newline-converter = "^0.3"
custom_error = "^1"
memory-stats = "^1"

[profile.release]
opt-level = 3

[profile.fastprod]
inherits = "release"
opt-level = 1

[profile.fastdev]
inherits = "dev"
opt-level = 1

[profile.production]
inherits = "release"
lto = "fat"
