[package]
name = "dictd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "net", "macros", "io-util", "fs"]}
tokio-util = { version = "*", features=["codec"] }
futures-util = "0.3"
futures = { version = "^0.3" }
regex = "1"
rayon = "1.8"
strum = "0.25"
strum_macros = "0.25"
serde = "^1"
custom_error = "1.9"
toml = "^0.8"
egzreader = "2"

# Waiting https://github.com/phiresky/sqlite-zstd/issues/35
sqlite-zstd = {git = "https://github.com/inferrna/sqlite-zstd" }
newline-converter = "0.3"
memory-stats = "1.1"

[profile.release]
opt-level = 3

[profile.fastprod]
inherits = "release"
opt-level = 1

[profile.fastdev]
inherits = "dev"
opt-level = 1

[profile.production]
inherits = "release"
lto = "fat"